tests/vertical-slice/accept/multilevel_import.hew
import lib::math;

fn main() -> i64 {
    math.double(21)
}
