tests/vertical-slice/reject/std_panic_wrapper_os_args_oob.hew
import std::os;

fn main() -> i64 {
    let arg = os.args(os.args_count());
    arg.len()
}
